Class 13 Homework_javascript/html

--- a/class13-materials/template/index.html
+++ b/class13-materials/template/index.html
@@ -13,7 +13,21 @@
 	</head>
 	<body>
 		<h1>Come ON! you can do this!</h1>
+		<form>
+			<label for="temp"> Multiplication Tables </label>
+			<input id="answer" type="text" placeholder="answer">
+		
+		</form>
 
+		<button id="yell" type="button" name="button">Tables</button>
+
+		<h2 id="placeToYell"></h2>
 		<script type="text/javascript" src="js/main.js"></script>
+
+
+	<section>
+		
+	</section>	
+
 	</body>
 </html>
